adding tests for block-as-file path resolver
Signed-off-by: Atanas Atanasov <a.v.atanasov98@gmail.com>